force-app/main/default/objects/CampaignAccount__c/CampaignAccount__c.object-meta.xml
<CustomObject>
    <description>[a0r][CampaignAccount__c] Guarda o relacionamento entre Contas e Campanhas de Trade</description>
    <label>Agrupamento da Campanha</label>
    <nameField>
        <displayFormat>CAC-{YYYY}{00000}</displayFormat>
        <label>Código de Agrupamento da Campanha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agrupamentos da Campanha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>