force-app/main/default/objects/CampaignAccount__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <label>Agrupamento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agrupamento de Campanha</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agrupamentos da Campanha</relationshipLabel>
    <relationshipName>CampaignAccounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>