force-app/main/default/objects/CampaignAccount__c/fields/CampaignGroupKeyTxt__c.field-meta.xml
<CustomField>
    <fullName>CampaignGroupKeyTxt__c</fullName>
    <externalId>true</externalId>
    <label>Chave do Agrupamento</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>