force-app/main/default/objects/CampaignAccount__c/fields/CampaignLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Agrupamentos da Campanha</relationshipLabel>
    <relationshipName>CampaignAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>