force-app/main/default/objects/CampaignAccount__c/fields/GroupCodeFml__c.field-meta.xml
<CustomField>
    <fullName>GroupCodeFml__c</fullName>
    <formula>AccountLkp__r.GroupCodeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Agrupamento</label>
    <type>Text</type>
</CustomField>